--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver: com.mysql.jdbc.Driver
-db.url: jdbc:mysql://localhost:3306/world
+db.url: jdbc:mysql://localhost:3306/vandrc
 db.username: root
 db.password: admin
 
